--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <ul>
   <li><a href="index.html">网站首页</a></li>
   <li><a href="introduce/intr.html">学院概况</a></li>
-  <li><a href="#">新闻中心</a></li>
+  <li><a href="news.html">新闻中心</a></li>
   <li><a href="#">机构设置</a></li>
   <li><a href="#">教学科研</a></li>
   <li><a href="#">团学在线</a></li>
